
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int u8 ;


 int memcpy (int *,int *,int) ;
 int strlen (int *) ;

int putss(u8 *data, u8 *str) {
    int len;

    len = strlen(str);
    memcpy(data, str, len);
    return(len);
}
